# ReclassX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: FindQScintilla.cmake  FindQt5.cmake  deploy.cmake
deploy/: Reclass.desktop
plugins/ProcessMemory/: CMakeLists.txt  ProcessMemoryPlugin.cpp  ProcessMemoryPlugin.h
plugins/RcNetPluginCompatLayer/: CMakeLists.txt  ClrHost.cpp  ClrHost.h  RcNetCompatPlugin.cpp  RcNetCompatPlugin.h  RcNetCompatProvider.cpp  RcNetCompatProvider.h  ReClassNET_Plugin.hpp
plugins/RcNetPluginCompatLayer/bridge/: RcNetBridge.cs  RcNetBridge.csproj
scripts/: build.ps1  build_qscintilla.bat  build_qscintilla.ps1
src/: addressparser.cpp  addressparser.h  app.rc  compose.cpp  controller.cpp  controller.h  core.h  disasm.cpp  disasm.h  editor.cpp  editor.h  format.cpp  generator.cpp  icons.qrc  iplugin.h  main.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  pluginmanager.cpp  pluginmanager.h  processpicker.cpp  processpicker.h  processpicker.ui  providerregistry.cpp  providerregistry.h  resources.qrc  titlebar.cpp  titlebar.h  typeselectorpopup.cpp  typeselectorpopup.h
src/examples/: KUSER_SHARED_DATA.rcx  demo.rcx
src/mcp/: mcp_bridge.cpp
src/providers/: process_provider.h  provider.h  snapshot_provider.h
src/themes/: theme.cpp  theme.h  themeeditor.cpp
src/themes/defaults/: mid.json  reclass_dark.json  vs.json  warm.json
tests/: test_addressparser.cpp  test_command_row.cpp  test_compose.cpp  test_context_menu.cpp  test_controller.cpp  test_core.cpp  test_disasm.cpp  test_editor.cpp  test_format.cpp  test_generator.cpp  test_new_features.cpp  test_options_dialog.cpp  test_provider_getSymbol.cpp  test_rendered_view.cpp  test_type_selector.cpp  test_validation.cpp  test_windbg_provider.cpp
tools/: rcx-mcp-stdio.cpp
